--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,28 +1,28 @@
 * {
-    font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 body {
-    margin: 0;
+  margin: 0;
 }
 
 .button {
-    border: 1px solid #DEDEDE;
-    color: #FB3D02;
-    border-radius: 24px;
-    padding: 16px 25px;
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-    &__text {
-        margin: 0 13px;
-    }
-    &__icon-left {
-        width: 18px;
-    }
-    &__icon-right {
-        width: 8px;
-        position: relative;
-        top: 1.5px;
-    }
+  border: 1px solid #dedede;
+  color: #fb3d02;
+  border-radius: 24px;
+  padding: 16px 25px;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  &__text {
+    margin: 0 13px;
+  }
+  &__icon-left {
+    width: 18px;
+  }
+  &__icon-right {
+    width: 8px;
+    position: relative;
+    top: 1.5px;
+  }
 }
