--- a/scss/featured-recipes.scss
+++ b/scss/featured-recipes.scss
@@ -1,74 +1,74 @@
 .featuredRecipes {
-    padding: 70px 120px;
-    background-color: #F8F8F8;
-    &__top {
-        display: flex;
-        align-items: center;
-        margin-bottom: 25px;
-        a {
-            margin-left: auto;
-            color: #1F1F1F;
-            text-decoration: none;
-            font-weight: 700;
-            display: block;
-            width: 150px;
-        }
+  padding: 70px 120px;
+  background-color: #f8f8f8;
+  &__top {
+    display: flex;
+    align-items: center;
+    margin-bottom: 25px;
+    a {
+      margin-left: auto;
+      color: #1f1f1f;
+      text-decoration: none;
+      font-weight: 700;
+      display: block;
+      width: 150px;
     }
-    &__title {
-        color: #1F1F1F;
-        font-size: 30px;
-        font-weight: 700;
+  }
+  &__title {
+    color: #1f1f1f;
+    font-size: 30px;
+    font-weight: 700;
+  }
+  &__recipes {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  &__recipe {
+    width: 286px;
+    margin: 10px;
+    cursor: pointer;
+  }
+  &__recipe-img {
+    position: relative;
+  }
+  &__recipe-img-img {
+    width: 100%;
+  }
+  &__recipe-img-play-button {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    width: 80px;
+    height: 80px;
+    opacity: 0.85;
+  }
+  &__recipe-rating-and-length {
+    margin-top: 14px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  &__recipe-rating {
+    display: flex;
+    img {
+      margin-right: 3px;
+      display: block;
     }
-    &__recipes {
-        display: flex;
-        flex-wrap: wrap;
-    }
-    &__recipe {
-        width: 286px;
-        margin: 10px;
-        cursor: pointer;
-    }
-    &__recipe-img {
-        position: relative;
-    }
-    &__recipe-img-img {
-        width: 100%
-    }
-    &__recipe-img-play-button {
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        margin: auto;
-        width: 80px;
-        height: 80px;
-        opacity: .85;
-    }
-    &__recipe-rating-and-length {
-        margin-top: 14px;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-    }
-    &__recipe-rating {
-        display: flex;
-        img {
-            margin-right: 3px;
-            display: block;
-        }
-    }
-    &__recipe-length {
-        border: 1px solid #DEDEDE;
-        border-radius: 40px;
-        padding: 4px 10px;
-        font-size: 12px;
-        color: #1F1F1F;
-    }
-    &__recipe-title {
-        margin-top: 10px;
-        color: #1F1F1F;
-        font-size: 20px;
-        font-weight: 700;
-    }
+  }
+  &__recipe-length {
+    border: 1px solid #dedede;
+    border-radius: 40px;
+    padding: 4px 10px;
+    font-size: 12px;
+    color: #1f1f1f;
+  }
+  &__recipe-title {
+    margin-top: 10px;
+    color: #1f1f1f;
+    font-size: 20px;
+    font-weight: 700;
+  }
 }
